--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -1,8 +1,12 @@
 <%- include('templates/header.ejs'); %>
 
-<section id="carrousel">
-    <main>
-        
+<section id="intro" class="background">
+    <main class="container">
+        <article>
+            <!-- <h1>Olá, seja bem vindo ao meu portfolio!
+            <span class="_ts10">Ígor Lúcio, <span>desenvolvedor Front-end</span></span></h1>
+            <p>Desenvolvimento WEB, criação de sites responsívos.</p> -->
+        </article>
     </main>
 </section>
 
